# rustlet

./: Cargo.toml  README.md
src/: font.rs  lib.rs  main.rs  settings.rs  text.rs
tests/: integration.rs
tests/data/outputs/: leanonme.txt  takemehome.txt
tests/diff/: mod.rs
