[package]
name = "rustlet"
version = "0.1.0"
edition = "2021"
authors = ["Joshua Davey <josh@joshuadavey.com>"]
repository = "https://github.com/jgdavey/rustlet"
license = "MIT/Apache-2.0"

[dependencies]
nom = "5"
bitflags = "2"
clap = "2"
encoding_rs = "0.8"
encoding_rs_io = "0.1"

[dev-dependencies]
difference = "2.0.0"
ansi_term = "0.12"

[lib]
test = false
